force-app/main/default/objects/Post_Dated_Cheque__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>