force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No__c</fullName>
    <label>Cheque No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>