force-app/main/default/objects/Post_Dated_Cheque__c/fields/Hold__c.field-meta.xml
<CustomField>
    <fullName>Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold</label>
    <type>Checkbox</type>
</CustomField>