force-app/main/default/objects/Post_Dated_Cheque__c/fields/No_of_Cheques__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cheques__c</fullName>
    <label>No. of Cheques</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>