force-app/main/default/objects/Post_Dated_Cheque__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Post Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <type>Lookup</type>
</CustomField>