force-app/main/default/objects/Post_Dated_Cheque__c/fields/Remittance_Bank__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Bank__c</fullName>
    <label>Remittance Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>