force-app/main/default/objects/Post_Dated_Cheque__c/fields/Remittance_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Remittance_Bank_Name__c</fullName>
    <label>Remittance Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>