force-app/main/default/objects/Post_Dated_Cheque__c/fields/X1st_Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Cheque_Date__c</fullName>
    <label>1st Cheque Date</label>
    <type>Date</type>
</CustomField>