force-app/main/default/objects/Post_Dated_Cheque__c/fields/X1st_Cheque_No__c.field-meta.xml
<CustomField>
    <fullName>X1st_Cheque_No__c</fullName>
    <label>1st Cheque No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>