force-app/main/default/objects/Post_Dated_Cheque__c/fields/Yardi_Response__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Response__c</fullName>
    <label>Yardi Response</label>
    <length>50</length>
    <type>Text</type>
</CustomField>