force-app/main/default/objects/Post_Dated_Cheque__c/fields/Yardi_Token__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Token__c</fullName>
    <label>Yardi Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>